--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,12 +1,13 @@
-<div *ngIf="loading$ | async" class="loading-indicator">
-  <mat-spinner></mat-spinner>
+<div *ngIf="loading" class="loading-indicator">
+  <!-- <mat-spinner></mat-spinner> -->
+  <div class="spinner"></div>
 </div>
 
-<div *ngIf="!(loading$ | async)" class="d-block w-100">
+<div *ngIf="!loading" class="d-block w-100">
   <app-header (search)="search($event)"></app-header>
 </div>
 
-<div *ngIf="!(loading$ | async)" class="user-list">
+<div *ngIf="!loading" class="user-list">
   <div *ngFor="let user of filterUsers$ | async" (click)="navigateToUser(user.id)" class="user-card">
       <mat-card>
         <mat-card-title>{{ user.first_name }} {{ user.last_name }}</mat-card-title>
